--- a/Titanic_solution.ipynb
+++ b/Titanic_solution.ipynb
@@ -2,13 +2,545 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1940ce7-19c9-4f80-8d02-2c6413d74fd4",
+   "execution_count": 6,
+   "id": "960652f5-4cac-4b9d-83ec-e5d40e3e1302",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (\"Projeto\")\n"
+    "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "47053591-3c88-43be-94eb-c5016057369a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('titanic.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2d177e2a-886a-41f0-bb2d-2c4c25921988",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>Montvila, Rev. Juozas</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>Graham, Miss. Margaret Edith</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>Johnston, Miss. Catherine Helen \"Carrie\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>Behr, Mr. Karl Howell</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>Dooley, Mr. Patrick</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>891 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Name   Age     Sex  Pclass  \\\n",
+       "0                              Braund, Mr. Owen Harris  22.0    male       3   \n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  38.0  female       1   \n",
+       "2                               Heikkinen, Miss. Laina  26.0  female       3   \n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  35.0  female       1   \n",
+       "4                             Allen, Mr. William Henry  35.0    male       3   \n",
+       "..                                                 ...   ...     ...     ...   \n",
+       "886                              Montvila, Rev. Juozas  27.0    male       2   \n",
+       "887                       Graham, Miss. Margaret Edith  19.0  female       1   \n",
+       "888           Johnston, Miss. Catherine Helen \"Carrie\"   NaN  female       3   \n",
+       "889                              Behr, Mr. Karl Howell  26.0    male       1   \n",
+       "890                                Dooley, Mr. Patrick  32.0    male       3   \n",
+       "\n",
+       "     Survived  \n",
+       "0           0  \n",
+       "1           1  \n",
+       "2           1  \n",
+       "3           1  \n",
+       "4           0  \n",
+       "..        ...  \n",
+       "886         0  \n",
+       "887         1  \n",
+       "888         0  \n",
+       "889         1  \n",
+       "890         0  \n",
+       "\n",
+       "[891 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter1 = df[['Name', 'Age', 'Sex', 'Pclass', 'Survived']]\n",
+    "filter1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e4963a14-8e76-40f9-a181-06ada43a7279",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Bonnell, Miss. Elizabeth</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Spencer, Mrs. William Augustus (Marie Eugenie)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>Harper, Mrs. Henry Sleeper (Myna Haxtun)</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>856</th>\n",
+       "      <td>Wick, Mrs. George Dennick (Mary Hitchcock)</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>862</th>\n",
+       "      <td>Swift, Mrs. Frederick Joel (Margaret Welles Ba...</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>871</th>\n",
+       "      <td>Beckwith, Mrs. Richard Leonard (Sallie Monypeny)</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>879</th>\n",
+       "      <td>Potter, Mrs. Thomas Jr (Lily Alexenia Wilson)</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>Graham, Miss. Margaret Edith</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Name   Age     Sex  Pclass  \\\n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  38.0  female       1   \n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  35.0  female       1   \n",
+       "11                            Bonnell, Miss. Elizabeth  58.0  female       1   \n",
+       "31      Spencer, Mrs. William Augustus (Marie Eugenie)   NaN  female       1   \n",
+       "52            Harper, Mrs. Henry Sleeper (Myna Haxtun)  49.0  female       1   \n",
+       "..                                                 ...   ...     ...     ...   \n",
+       "856         Wick, Mrs. George Dennick (Mary Hitchcock)  45.0  female       1   \n",
+       "862  Swift, Mrs. Frederick Joel (Margaret Welles Ba...  48.0  female       1   \n",
+       "871   Beckwith, Mrs. Richard Leonard (Sallie Monypeny)  47.0  female       1   \n",
+       "879      Potter, Mrs. Thomas Jr (Lily Alexenia Wilson)  56.0  female       1   \n",
+       "887                       Graham, Miss. Margaret Edith  19.0  female       1   \n",
+       "\n",
+       "     Survived  \n",
+       "1           1  \n",
+       "3           1  \n",
+       "11          1  \n",
+       "31          1  \n",
+       "52          1  \n",
+       "..        ...  \n",
+       "856         1  \n",
+       "862         1  \n",
+       "871         1  \n",
+       "879         1  \n",
+       "887         1  \n",
+       "\n",
+       "[91 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter1 = filter1.loc[(filter1['Sex'] == 'female') & (filter1['Pclass'] == 1) & (filter1['Survived'] == 1)]\n",
+    "filter1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "edd9bcdd-56f8-47ec-9c22-b1d76216222b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>730</th>\n",
+       "      <td>Allen, Miss. Elisabeth Walton</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>275</th>\n",
+       "      <td>Andrews, Miss. Kornelia Theodosia</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>571</th>\n",
+       "      <td>Appleton, Mrs. Edward Dale (Charlotte Lamson)</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>700</th>\n",
+       "      <td>Astor, Mrs. John Jacob (Madeleine Talmadge Force)</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>369</th>\n",
+       "      <td>Aubart, Mme. Leontine Pauline</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>Ward, Miss. Anna</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>Warren, Mrs. Frank Manley (Anna Sophia Atkinson)</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>318</th>\n",
+       "      <td>Wick, Miss. Mary Natalie</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>856</th>\n",
+       "      <td>Wick, Mrs. George Dennick (Mary Hitchcock)</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>Young, Miss. Marie Grice</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Name   Age     Sex  Pclass  \\\n",
+       "730                      Allen, Miss. Elisabeth Walton  29.0  female       1   \n",
+       "275                  Andrews, Miss. Kornelia Theodosia  63.0  female       1   \n",
+       "571      Appleton, Mrs. Edward Dale (Charlotte Lamson)  53.0  female       1   \n",
+       "700  Astor, Mrs. John Jacob (Madeleine Talmadge Force)  18.0  female       1   \n",
+       "369                      Aubart, Mme. Leontine Pauline  24.0  female       1   \n",
+       "..                                                 ...   ...     ...     ...   \n",
+       "258                                   Ward, Miss. Anna  35.0  female       1   \n",
+       "366   Warren, Mrs. Frank Manley (Anna Sophia Atkinson)  60.0  female       1   \n",
+       "318                           Wick, Miss. Mary Natalie  31.0  female       1   \n",
+       "856         Wick, Mrs. George Dennick (Mary Hitchcock)  45.0  female       1   \n",
+       "325                           Young, Miss. Marie Grice  36.0  female       1   \n",
+       "\n",
+       "     Survived  \n",
+       "730         1  \n",
+       "275         1  \n",
+       "571         1  \n",
+       "700         1  \n",
+       "369         1  \n",
+       "..        ...  \n",
+       "258         1  \n",
+       "366         1  \n",
+       "318         1  \n",
+       "856         1  \n",
+       "325         1  \n",
+       "\n",
+       "[91 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter1 = filter1.sort_values(['Name'], ascending=True)\n",
+    "filter1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b1833b34-5861-4b18-afd9-c18915af0358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter1.to_csv('titanic_result.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4a7e442-2a48-4a0e-a9da-aa448217b250",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
